Subiendo todos los archivos de responsive

--- a/precios.html
+++ b/precios.html
@@ -10,7 +10,7 @@
     <!-- Servicio externo es un CDN -->
     
 </head>
-<body>
+<body class="precios">
 <header class="header background">
         <div class="contenedor">
            <figure class="logo">    <!-- Logotipo -->
